--- a/org.cfeclipse.cfmledit.dictionaries/.classpath
+++ b/org.cfeclipse.cfmledit.dictionaries/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry excluding="org/cfeclipse/cfml/dictionary/dictionary/|org/cfeclipse/cfml/dictionary/dictionary/inc/|org/cfeclipse/cfml/dictionary/dictionary/layouts/|org/cfeclipse/cfml/dictionary/dictionary/layouts/cfml701/|org/cfeclipse/cfml/dictionary/dictionary/toolbars/" kind="src" path="src"/>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/jdom-1.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
