--- a/org.cfeclipse.cfmledit.dictionaries/build.properties
+++ b/org.cfeclipse.cfmledit.dictionaries/build.properties
@@ -3,3 +3,4 @@ output.. = bin/
 bin.includes = META-INF/,\
                .
 src.includes = lib/
+additional.bundles = org.cfeclipse.cfmledit.libraries
